replace underscore.js with CDN
gives us source maps for better debugging as well

--- a/vcweb/core/templates/experimenter/subject-pool-index.html
+++ b/vcweb/core/templates/experimenter/subject-pool-index.html
@@ -109,9 +109,7 @@ Experiment Session Management
     {% include "autocomplete_light/static.html" %}
     <script src='{{ STATIC_URL }}js/bootstrap-datepicker.min.js'></script>
     <link rel="stylesheet" href='{{ STATIC_URL }}css/datepicker.css' />
-
-    <script type= "text/javascript" src="{{ STATIC_URL }}js/underscore-min.js"></script>
-
+    <script type= "text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/calendar.js"></script>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/calendar.css">
 
