update text and acknowledgements

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Virtual Commons Web Experiment
+    The Virtual Commons
 {% endblock %}
 
 {% block page%}
@@ -10,21 +10,20 @@
         <div>
             The Virtual Commons is an open software initiative hosted at
             <a class='external' href='http://www.asu.edu'>Arizona State University</a>.
-            We develop real-time dynamic experiments to help us analyze and understand issues related 
-            to the governance of common resources. Sharing common resources has been a challenge for 
-            human societies for millennia. In many circumstances, the ability to create effective institutional 
+            We develop real-time dynamic experiments to analyze and better understand collective action issues. For
+            example, sharing common resources has been a challenge for human societies for millennia. In many
+            circumstances, the ability to create effective institutional 
             arrangements has helped to avoid the <a href='http://en.wikipedia.org/wiki/Tragedy_of_the_commons'>tragedy of the commons</a>. 
-            <a href='http://www.sciencemag.org/cgi/content/abstract/328/5978/613'>Controlled experiments</a> have been
-            instrumental in increasing our understanding of how people organize themselves in cooperative
-            arrangements to govern common resources.
+            <a href='http://www.sciencemag.org/cgi/content/abstract/328/5978/613'>Controlled experiments</a> are 
+            instrumental for increasing our understanding of how people organize themselves in cooperative
+            arrangements.
         </div>
         <h2>Current development</h2>
         <div>
             This website has been tested against up-to-date versions of <a href='http://www.google.com/chrome'>Google Chrome</a>,
             <a href='http://getfirefox.com'>Mozilla Firefox</a> and <a href='http://www.apple.com/safari'>Safari</a>.
 
-            You can find up-to-date development news and documentation at our <a class='external'
-            href='https://bitbucket.org/virtualcommons/vcweb'>Bitbucket repository</a>.
+            You can find up-to-date development news and documentation at our <a class='external' href='https://github.com/virtualcommons/vcweb'>GitHub repository</a>.
         </div>
         <h2>Acknowledgements</h2>
         <p>
@@ -33,9 +32,9 @@
             and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
         </p>
         <p>
-            Open source and education licenses have been generously provided for 
+            Open source and education licenses have been generously provided by 
             <a href='http://www.jetbrains.com/pycharm'>Jetbrains <img width='80' height='18' class='img-inline' src='http://www.jetbrains.com/pycharm/docs/logo_pycharm.png'></a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
-            and <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>.
+            <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>, and <a href='https://github.com'>GitHub</a>.
         </p>
     </div>
 {% endblock page %}
