switch to protocol independent url

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -33,7 +33,7 @@
         </p>
         <p>
             Open source and education licenses have been generously provided by 
-            <a href='http://www.jetbrains.com/pycharm'>Jetbrains <img width='80' height='18' class='img-inline' src='http://www.jetbrains.com/pycharm/docs/logo_pycharm.png'></a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
+            <a href='http://www.jetbrains.com/pycharm'>Jetbrains <img width='80' height='18' class='img-inline' src='//www.jetbrains.com/pycharm/docs/logo_pycharm.png'></a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
             <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>, and <a href='https://github.com'>GitHub</a>.
         </p>
     </div>
