--- a/vcweb/core/templates/forms/base.html
+++ b/vcweb/core/templates/forms/base.html
@@ -11,7 +11,7 @@
 {% endblock page %}
 {% block javascript %}
     {{ block.super }}
-    {% include "includes/jquery.validate.html" %}
+    {% include 'includes/jquery.validate.html' %}
     {% include 'autocomplete_light/static.html' %}
 {% endblock %}
 
