--- a/vcweb/experiment/bound/templates/bound/participate.html
+++ b/vcweb/experiment/bound/templates/bound/participate.html
@@ -32,7 +32,7 @@
                     <i class='fa-warning'></i> Chat is currently disabled.
                 </div>
             </div>
-            <form id="chat-form" class='form-inline' data-bind='submit: submitChatMessage' >
+            <form id="chat-form" class='form-horizontal' data-bind='submit: submitChatMessage' >
                 <div class='input-group'>
                     <span class='input-group-addon'><i id='chat-icon' class='text-info fa fa-comment'></i></span>
                     <input id='chatMessage' class="form-control" type="text" placeholder="Chat with your group">
@@ -899,8 +899,7 @@ function onYouTubeIframeAPIReady() {
         function initialize(experimentModelJson) {
             var experimentModel = new ExperimentModel(experimentModelJson);
             ko.applyBindings(experimentModel);
-            var s = connect();
-            s.onmessage = function(message) {
+            connect().onmessage = function(message) {
                 var data = $.parseJSON(message.data);
                 switch (data.event_type) {
                     case 'chat':
