--- a/vcweb/core/templates/experimenter/session_detail.html
+++ b/vcweb/core/templates/experimenter/session_detail.html
@@ -23,7 +23,8 @@
         </div>
         <h3>Registered Participants</h3>
         <form method="POST" id="participant-info" class="form-inline">
-        {{ formset.management_form }}
+            {% csrf_token %}
+            {{ formset.management_form }}
             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="participant-table">
                 <thead>
                     <tr>
