--- a/vcweb/core/templates/participant/experiment-session-signup.html
+++ b/vcweb/core/templates/participant/experiment-session-signup.html
@@ -13,42 +13,42 @@ Signup for an Experiment Session
             <div class="callout callout-info">
                 <form method="POST" action='{% url "subjectpool:submit_experiment_session_signup" %}'>
                     {% csrf_token %}
-                <input type="hidden" name="experiment_metadata_pk" value={{ exp.list.0.experiment_metadata_pk }}  />
-                <legend>Experiment Session Signup</legend>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Select</th>
-                            <th>
-                                Start Date
-                                <span class="add-on"><i class="fa fa-calendar"></i></span>
-                            </th>
-                            <th>
-                                Start Time
-                                <span class="add-on"><i class="fa fa-clock-o"></i></span>
-                            </th>
-                            {% with exp.list.0.invitation as first_invitation %}
-                                {% if first_invitation.scheduled_end_date != '' %}
-                                    <th>
-                                        End Date
-                                        <span class="add-on"><i class="fa fa-calendar"></i></span>
-                                    </th>
-                                {% endif %}
-                            {% endwith %}
-                            <th>
-                                End Time
-                                <span class="add-on"><i class="fa fa-clock-o"></i></span>
-                            </th>
-                            <th>
-                                Location
-                                <span class="add-on"><i class="fa fa-flag"></i></span>
-                            </th>
-                            <th> Openings </th>
-                        </tr>
-                    </thead>
-                    <tbody>
+                    <input type="hidden" name="experiment_metadata_pk" value={{ exp.list.0.experiment_metadata_pk }}  />
+                    <legend>Experiment Session Signup</legend>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Select</th>
+                                <th>
+                                    Start Date
+                                    <span class="add-on"><i class="fa fa-calendar"></i></span>
+                                </th>
+                                <th>
+                                    Start Time
+                                    <span class="add-on"><i class="fa fa-clock-o"></i></span>
+                                </th>
+                                {% with exp.list.0.invitation as first_invitation %}
+                                    {% if first_invitation.scheduled_end_date != '' %}
+                                        <th>
+                                            End Date
+                                            <span class="add-on"><i class="fa fa-calendar"></i></span>
+                                        </th>
+                                    {% endif %}
+                                {% endwith %}
+                                <th>
+                                    End Time
+                                    <span class="add-on"><i class="fa fa-clock-o"></i></span>
+                                </th>
+                                <th>
+                                    Location
+                                    <span class="add-on"><i class="fa fa-flag"></i></span>
+                                </th>
+                                <th> Openings </th>
+                            </tr>
+                        </thead>
+                        <tbody>
                         {% for item in exp.list %}
-                            {% if item.invitation.openings  != 0 %}
+                            {% if item.invitation.openings|add:waitlist_size != 0 %}
                             <tr>
                                 <td>
                                     {% if item.invitation.selected == True %}
@@ -64,7 +64,11 @@ Signup for an Experiment Session
                                 {% endif %}
                                 <td><b> {{ item.invitation.scheduled_end_time }}</b></td>
                                 <td> {{ item.invitation.location }}</td>
-                                <td> {{ item.invitation.openings }}</td>
+                                {% if item.invitation.openings <= 0 %}
+                                    <td style="color:red"> {{ item.invitation.openings|add:waitlist_size }} (waitlist)</td>
+                                {% else %} 
+                                   <td>{{ item.invitation.openings }} (+ {{waitlist_size}} waitlist)</td>
+                                {% endif %}
                             </tr>
                             {% else %}
                             <tr class="error-row">
@@ -82,14 +86,14 @@ Signup for an Experiment Session
                                 {% endif %}
                                 <td><b> {{ item.invitation.scheduled_end_time }}</b></td>
                                 <td> {{ item.invitation.location }}</td>
-                                <td> {{ item.invitation.openings }}</td>
+                                <td> {{ item.invitation.openings|add:waitlist_size }}</td>
                             </tr>
                         {% endif %}
                         {% endfor %}
-                    </tbody>
-                </table>
-                <input type="submit" class="btn btn-success" value="Save" />
-            </form>
+                        </tbody>
+                    </table>
+                    <input type="submit" class="btn btn-success" value="Save" />
+                </form>
             </div>
             {% endfor %}
             {% if grouped_invitations|length  == 0 %}
