Adding code to authenticate connect event using auth_token. Also fixing few bugs.

--- a/vcweb/core/templates/includes/experimenter.events.html
+++ b/vcweb/core/templates/includes/experimenter.events.html
@@ -9,6 +9,7 @@ function createMessageEvent(message, event_type) {
     return JSON.stringify({
         "event_type": event_type,
         "experiment_id": {{experiment.pk}},
+        "user_id": {{ request.user.pk }},
         "auth_token": "{{ request.user.experimenter.authentication_token }}",
         "message": message
     });
