--- a/vcweb/core/templates/includes/experimenter.events.html
+++ b/vcweb/core/templates/includes/experimenter.events.html
@@ -10,6 +10,7 @@ function createMessageEvent(message, event_type) {
         "event_type": event_type,
         "experiment_id": {{experiment.pk}},
         "user_id": {{ request.user.pk }},
+        "email": "{{ request.user.email }}",
         "auth_token": "{{ request.user.experimenter.authentication_token }}",
         "message": message
     });
