--- a/vcweb/core/templates/includes/sockjs.html
+++ b/vcweb/core/templates/includes/sockjs.html
@@ -11,11 +11,12 @@ function connect(uri, host, port) {
         console.log("defaulting to " + DEFAULT_URI);
         uri = DEFAULT_URI;
     }
-    if ( !port ) {
-        port = DEFAULT_PORT;
-    }
-    //var sockjsServer = "http://" + host + ":" + port +"/websocket" + uri;
+    {% if DEBUG %}
+    port = port || DEFAULT_PORT;
+    var sockjsServer = "http://" + host + ":" + port +"/websocket" + uri;
+    {% else %}
     var sockjsServer = "https://" + host + "/websocket" + uri;
+    {% endif %}
     console.log("Establishing connection to " + sockjsServer);
     socket = new SockJS(sockjsServer);
     socket.onopen = function() {
